--- a/style.css
+++ b/style.css
@@ -11,8 +11,15 @@
     font-family: 'Nunito-Regular', serif;
 }
 body {
+    transition: 0.5s ease;
+}
+body.basic {
     background-color: #CD5656;
     color: #EAEBD0;
+}
+body.dark {
+    background-color: black;
+    color: #DDDDDD;
 }
 .icons {
     height: 26px;
@@ -69,7 +76,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.red-line.basic {
     background-color: rgb(175, 62, 62, 0.3);
+}
+.red-line.dark {
+    background-color: #30302f;
 }
 /* main container */
 .main-container {
@@ -77,13 +89,20 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
-    background-color: rgb(218, 108, 108, 0.8);
+    border-radius: 10px;
     width: 50%;
     max-width: 800px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
     height: 350px;
+}
+.main-container.basic {
+    background-color: rgb(218, 108, 108, 0.8);
+}
+.main-container.dark {
+    background-color: #30302f;
+
 }
 .navi {
     display: inline-flex;
@@ -92,18 +111,22 @@ body {
 }
 .pomodoro-navi {
     border-radius: 10px;
-    background-color: rgb(175, 62, 62, 0.8);
     padding: 10px 20px;
+    cursor: pointer;
+}
+.pomodoro-navi.basic {
+    background-color: rgb(175, 62, 62, 0.8);
+}
+.pomodoro-navi.dark {
+    background-color: black;
 }
 .counter {
     display: flex;
     font-size: 100px;
     font-weight: bold;
 }
-.start-button {
+.button-start {
     border-radius: 10px;
-    background-color: rgb(234, 235, 208);
-    color: #CD5656;
     height: 85px;
     width: 275px;
     font-size: 50px;
@@ -114,9 +137,44 @@ body {
     cursor: pointer;
     transition: transform 0.2s ease;
 }
-.start-button:hover {
+.button-start.basic {
+    background-color: rgb(234, 235, 208);
+    color: #CD5656;
+}
+.button-start.dark {
+    background-color: black;
+    color: #DDDDDD;
+}
+.button-start:hover {
     transform: scale(1.05);
 }
 .short-navi, .long-navi {
     cursor: pointer;
+}
+.buttons {
+    display: inline-flex;
+    gap: 40px;
+}
+.button-reset {
+    border-radius: 10px;
+    height: 85px;
+    width: 275px;
+    font-size: 50px;
+    font-weight: bold;
+    justify-content: center;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    text-align: center;
+}
+.button-reset:hover {
+    transform: scale(1.05);
+}
+.button-reset.basic {
+    background-color: rgb(234, 235, 208);
+    color: #CD5656;
+}
+.button-reset.dark {
+    background-color: black;
+    color: #DDDDDD;
 }
