--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body.dark {
 .first-line-name {
     display: inline-flex;
     gap: 10px;
+    margin-left: -450px;
 }
 .name-icon {
     height: 48px;
@@ -64,7 +65,6 @@ body.dark {
 .pomodoro-name {
     font-weight: 900;
     font-size: 35px;
-    margin-right: 180px;
 }
 /* red line */
 .red-line {
